--- a/IO/CMakeLists.txt
+++ b/IO/CMakeLists.txt
@@ -26,6 +26,7 @@ SET(MASTER_INDEX_FILES "${WrapITK_BINARY_DIR}/VXLNumerics/VXLNumerics.mdx"
                        "${WrapITK_BINARY_DIR}/Numerics/ITKNumerics.mdx"
                        "${WrapITK_BINARY_DIR}/CommonA/ITKCommonA.mdx"
                        "${WrapITK_BINARY_DIR}/CommonB/ITKCommonB.mdx"
+                       "${WrapITK_BINARY_DIR}/IO/ITKIO.mdx"
 )
 
 ITK_WRAP_LIBRARY("${WRAP_GROUPS}" ITKIO IO
