--- a/Python/CMakeLists.txt
+++ b/Python/CMakeLists.txt
@@ -4,19 +4,20 @@
 SET(CONFIG_WRAP_ITK_DATA_ROOT "${WrapITK_BINARY_DIR}/Data")
 SET(CONFIG_WRAP_ITK_TEST_ROOT "${WrapITK_BINARY_DIR}/Testing")
 # SWIG interface files aren't config-dependent
-SET(CONFIG_PYTHON_SWIGPY_DIR "${LIBRARY_OUTPUT_PATH}")
 SET(CONFIG_PYTHON_CONFIGPY_DIR "${CMAKE_CURRENT_BINARY_DIR}/Configuration")
 
 IF(CMAKE_CONFIGURATION_TYPES)
   FOREACH(config ${CMAKE_CONFIGURATION_TYPES})
-    # Configured libs are sent to ${config} subdir
+    # SWIG-generated libs and *.py files are sent to ${config} subdir
+    SET(CONFIG_PYTHON_SWIGPY_DIR "${LIBRARY_OUTPUT_PATH}/${config}")
     SET(CONFIG_PYTHON_SWIGLIB_DIR "${LIBRARY_OUTPUT_PATH}/${config}")
     CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/itkConfig.py.in"
                    "${CMAKE_CURRENT_BINARY_DIR}/${config}/itkConfig.py"
                    @ONLY IMMEDIATE)
   ENDFOREACH(config)
 ELSE(CMAKE_CONFIGURATION_TYPES)
-    SET(CONFIG_PYTHON_SWIGLIB_DIR "${LIBRARY_OUTPUT_PATH}")
+  SET(CONFIG_PYTHON_SWIGPY_DIR "${LIBRARY_OUTPUT_PATH}")
+  SET(CONFIG_PYTHON_SWIGLIB_DIR "${LIBRARY_OUTPUT_PATH}")
   CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/itkConfig.py.in"
                  "${CMAKE_CURRENT_BINARY_DIR}/itkConfig.py"
                  @ONLY IMMEDIATE)
