--- a/WrapITKConfig.cmake.in
+++ b/WrapITKConfig.cmake.in
@@ -50,7 +50,7 @@ ELSE(JAVA_OUTPUT_DIR)
   ENDIF(WRAP_ITK_JAVA)
 ENDIF(JAVA_OUTPUT_DIR)
 
-SET(WRAP_ITK_MASTER_INDEX_FILES @CONFIG_MIDX_FILES@)
+SET(WRAP_ITK_MASTER_INDEX_DIRECTORY @CONFIG_WRAP_ITK_MASTER_INDEX_DIRECTORY@)
 
 LINK_DIRECTORIES("@CONFIG_WRAP_ITK_SWIG_LIBRARY_DIR@")
 
