Change variable names to respect 'GLOBALS' versus 'locals' convention. Part of build changes.
darcs-hash:20060121012129-733a7-fba821e02783f9767db81d7c3da49e745c58e3c1.gz

--- a/wrap_.cxx.in
+++ b/wrap_.cxx.in
@@ -3,10 +3,10 @@
 #ifdef CABLE_CONFIGURATION
 namespace _cable_
 {
-   const char* const group = "@itk_Module@";
+   const char* const group = "@WRAPPER_MODULE_NAME@";
    namespace wrappers
    {
-@itk_Typedef@
+@WRAPPER_TYPEDEFS@
    }
 }
 #endif
