More changes to make global var names in caps and locals in lowercase. Part of build changes.
darcs-hash:20060121020649-733a7-06c05a633f50cfa40ce21533861f980ec3c5152f.gz

--- a/wrap_.cxx.in
+++ b/wrap_.cxx.in
@@ -1,12 +1,12 @@
-@WRAP_INCLUDE_FILE@
+@CONFIG_WRAPPER_INCLUDES@
 
 #ifdef CABLE_CONFIGURATION
 namespace _cable_
 {
-   const char* const group = "@WRAPPER_MODULE_NAME@";
+   const char* const group = "@CONFIG_WRAPPER_MODULE_NAME@";
    namespace wrappers
    {
-@WRAPPER_TYPEDEFS@
+@CONFIG_WRAPPER_TYPEDEFS@
    }
 }
 #endif
