--- a/wrap_ITK.cxx.in
+++ b/wrap_ITK.cxx.in
@@ -21,7 +21,7 @@ namespace _cable_
   const char* const package = ITK_WRAP_PACKAGE;
   const char* const groups[] =
   {
-@GROUP_LIST@
+@CONFIG_GROUP_LIST@
   };
 }
 #endif
