Modifications to CommonA for new build system. Part of build changes.
darcs-hash:20060123052842-733a7-3e03e580b1ac67d4c7f84d96cbe2af9a192c0a6b.gz

--- a/CommonA/CMakeLists.txt
+++ b/CommonA/CMakeLists.txt
@@ -1,14 +1,6 @@
-SET(ITK_LIBRARY "ITKCommonA")
-STRING(TOLOWER ${ITK_LIBRARY} ITK_LIBRARY_LANG)
-SET(ITK_LANG_FILE "${WrapITK_BINARY_DIR}/#MODULE_LANG#/${ITK_LIBRARY_LANG}")
-WRITE_LANG_BEGIN("itkcommon" "${ITK_LANG_FILE}")
+BEGIN_WRAPPER_LIBRARY("ITKCommonA")
 
-SET(CXX_OUTPUT_DIR "${WrapITK_BINARY_DIR}/CommonA")
-
-#------------------------------------------------------------------------------
-# create a list of groups
-# IMPORTANT : order has consequences
-SET(WRAP_GROUPS
+SET(WRAPPER_LIBRARY_GROUPS
     itkOffset
     itkArray
     itkContinuousIndex
@@ -44,49 +36,19 @@ SET(WRAP_GROUPS
     itkVectorContainer
     itkSimpleDataObjectDecorator
     itkImageBoundaryCondition
-    itkPointSet
-)
+    itkPointSet) 
 
-#------------------------------------------------------------------------------
-# create the wrap_ITKCommon*.cxx files
-WRITE_MODULE_LANG("ITKCommonA" "${CXX_OUTPUT_DIR}" "${WRAP_GROUPS}")
+SET(WRAPPER_LIBRARY_CABLESWIG_INPUTS "${CMAKE_SURRENT_SOURCE_DIR}/wrap_SwigExtras.cxx")
+SET(WRAPPER_LIBRARY_SWIG_INPUTS "${CMAKE_SURRENT_SOURCE_DIR}/SwigExtras.i") 
 
-#------------------------------------------------------------------------------
-# create a list of files for templating
-# IMPORTANT : order has consequences
-SET(WRAP_CXX_EXTRA
-    ITKUtils
-    ITKPyUtils
-)
-
-FOREACH(file ${WRAP_GROUPS} ${WRAP_CXX_EXTRA})
-   INCLUDE_WRAP_CMAKE(${file} "${CXX_OUTPUT_DIR}")
-ENDFOREACH(file ${WRAP_CXX_SOURCES})
-
-#------------------------------------------------------------------------------
-# create a list of cable config files for wrapping
-SET(WRAP_SOURCES
-  ${WRAP_CXX_SOURCES}
-  wrap_SwigExtras
-)
-
+# Need to include the current dir because the compiler needs to find itkStringStream.h
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
+SET(WRAPPER_LIBRARY_CXX_SOURCES "${CMAKE_SURRENT_SOURCE_DIR}/itkStringStream.cxx") 
 
-SET(MASTER_INDEX_FILES "${WrapITK_BINARY_DIR}/VXLNumerics/VXLNumerics.mdx"
-                       "${WrapITK_BINARY_DIR}/CommonA/ITKCommonA.mdx"
-)
-SET(ITK_SWIG_FILE ${WrapITK_SOURCE_DIR}/CommonA/SwigExtras.i)
-SET(ITK_SWIG_FILE_CXX ${WrapITK_BINARY_DIR}/CommonA/SwigExtras_wrap)
+SET(WRAPPER_LIBRARY_LINK_LIBRARIES ITKCommon)
 
-SET(ITK_EXTRA_TCL_SOURCES itkTclCommand.cxx)
-SET(ITK_EXTRA_PYTHON_SOURCES itkPyCommand.cxx)
+WRAPPER_LIBRARY_CREATE_WRAP_FILES()
 
-SET(ITK_EXTRA_PYTHON_WRAP wrap_ITKPyUtils )
-SET(ITK_EXTRA_TCL_WRAP wrap_ITKUtils)
+WRAPPER_LIBRARY_CREATE_LIBRARY()
 
-ITK_WRAP_LIBRARY("${WRAP_GROUPS}" ITKCommonA CommonA "VXLNumerics" itkStringStream.cxx "ITKCommon"
-  "${MASTER_INDEX_FILES}" "${WrapITK_SOURCE_DIR}" "${WrapITK_BINARY_DIR}")
 
-#------------------------------------------------------------------------------
-WRITE_LANG_END()
-#------------------------------------------------------------------------------
