WrapITK now configures properly. Part of build changes.
darcs-hash:20060123084300-733a7-ecc65adddc4de0427cc807a3d63dcdd912a25dd8.gz

--- a/BasicFiltersA/CMakeLists.txt
+++ b/BasicFiltersA/CMakeLists.txt
@@ -1,6 +1,7 @@
 BEGIN_WRAPPER_LIBRARY("ITKBasicFiltersA")
 
 SET(WRAPPER_LIBRARY_DEPENDS 
+  VXLNumerics
   ITKNumerics
   ITKCommonA
   ITKCommonB)
