--- a/SpatialObject/CMakeLists.txt
+++ b/SpatialObject/CMakeLists.txt
@@ -1,6 +1,7 @@
 BEGIN_WRAPPER_LIBRARY("ITKSpatialObject")
 
 SET(WRAPPER_LIBRARY_DEPENDS 
+  VXLNumerics
   ITKNumerics
   ITKCommonA
   ITKCommonB)
