--- a/CommonB/CMakeLists.txt
+++ b/CommonB/CMakeLists.txt
@@ -1,6 +1,7 @@
-BEGIN_WRAPPER_LIBRARY("CommonB")
+BEGIN_WRAPPER_LIBRARY("ITKCommonB")
 
 SET(WRAPPER_LIBRARY_DEPENDS 
+  VXLNumerics
   ITKNumerics
   ITKCommonA)
 
