--- a/ConfigurationInputs/LanguageSupport/ModuleLoader.py.in
+++ b/ConfigurationInputs/LanguageSupport/ModuleLoader.py.in
@@ -1,3 +1,3 @@
 import itkBase
-itkBase.LoadModule('@CONFIG_MODULE_NAME@', globals())
+itkBase.LoadModule('@CONFIG_LIBRARY_NAME@', globals())
 del itkBase
