--- a/Numerics/CMakeLists.txt
+++ b/Numerics/CMakeLists.txt
@@ -2,5 +2,7 @@ BEGIN_WRAPPER_LIBRARY("ITKNumerics")
 
 SET(WRAPPER_LIBRARY_LINK_LIBRARIES ITKNumerics ITKStatistics)
 
+SET(WRAPPER_LIBRARY_DEPENDS VXLNumerics)
+
 WRAPPER_LIBRARY_CREATE_WRAP_FILES()
 WRAPPER_LIBRARY_CREATE_LIBRARY()
