fix empty VXLNumerics binary
darcs-hash:20060123164330-2fc9d-d54f0f1a1bdd0ae813a59445342f2d19740937d5.gz

--- a/VXLNumerics/CMakeLists.txt
+++ b/VXLNumerics/CMakeLists.txt
@@ -29,7 +29,7 @@ WRITE_MODULE_FILES()
 # Now we need to manually populate the WRAPPER_LIBRARY_CABLESWIG_INPUTS variable
 # with the manually-generated inputs.
 SET(WRAPPER_LIBRARY_CABLESWIG_INPUTS )
-FOREACH(file ${wrap_vnl})
+FOREACH(file ${WRAPPER_LIBRARY_GROUPS})
   SET(WRAPPER_LIBRARY_CABLESWIG_INPUTS ${WRAPPER_LIBRARY_CABLESWIG_INPUTS} 
     "${CMAKE_CURRENT_SOURCE_DIR}/wrap_${file}.cxx")
 ENDFOREACH(file)
