--- a/CommonA/CMakeLists.txt
+++ b/CommonA/CMakeLists.txt
@@ -41,8 +41,8 @@ SET(WRAPPER_LIBRARY_GROUPS
 SET(WRAPPER_LIBRARY_DEPENDS VXLNumerics)
 
 
-SET(WRAPPER_LIBRARY_CABLESWIG_INPUTS "${CMAKE_CURRENT_SOURCE_DIR}/wrap_SwigExtras.cxx")
-SET(WRAPPER_LIBRARY_SWIG_INPUTS "${CMAKE_CURRENT_SOURCE_DIR}/SwigExtras.i") 
+# SET(WRAPPER_LIBRARY_CABLESWIG_INPUTS "${CMAKE_CURRENT_SOURCE_DIR}/wrap_SwigExtras.cxx")
+# SET(WRAPPER_LIBRARY_SWIG_INPUTS "${CMAKE_CURRENT_SOURCE_DIR}/SwigExtras.i") 
 
 # Need to include the current dir because the compiler needs to find itkStringStream.h
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
