depends of CommonA
darcs-hash:20060123200628-2fc9d-cd1dc0a1585127fddfc5e4cd064e1e7c7b405728.gz

--- a/Numerics/CMakeLists.txt
+++ b/Numerics/CMakeLists.txt
@@ -2,7 +2,10 @@ BEGIN_WRAPPER_LIBRARY("ITKNumerics")
 
 SET(WRAPPER_LIBRARY_LINK_LIBRARIES ITKNumerics ITKStatistics)
 
-SET(WRAPPER_LIBRARY_DEPENDS VXLNumerics)
+SET(WRAPPER_LIBRARY_DEPENDS 
+  VXLNumerics
+  ITKCommonA
+)
 
 WRAPPER_LIBRARY_CREATE_WRAP_FILES()
 WRAPPER_LIBRARY_CREATE_LIBRARY()
