fix build order and deps
darcs-hash:20060123204550-2fc9d-aafddb5e2359e9b5c3d41d488c8a4f1be8dd5111.gz

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,7 +60,7 @@ SET(WRAP_ITK_GCCXML_INCLUDE_DIRS
 
 # ITK_KITS must be in proper order -- modules that depend on other modules
 # must come later in the list.
-SET(ITK_KITS VXLNumerics Numerics CommonA CommonB 
+SET(ITK_KITS VXLNumerics CommonA CommonB Numerics 
   BasicFiltersA BasicFiltersB BasicFiltersC IO
   SpatialObject Algorithms)
 SUBDIRS(SwigRuntime ${ITK_KITS} Tests Testing)
