--- a/CommonB/CMakeLists.txt
+++ b/CommonB/CMakeLists.txt
@@ -2,7 +2,7 @@ BEGIN_WRAPPER_LIBRARY("ITKCommonB")
 
 SET(WRAPPER_LIBRARY_DEPENDS 
   VXLNumerics
-  ITKNumerics
+#   ITKNumerics
   ITKCommonA)
 
 SET(WRAPPER_LIBRARY_LINK_LIBRARIES ITKCommon)
