--- a/Numerics/CMakeLists.txt
+++ b/Numerics/CMakeLists.txt
@@ -5,6 +5,7 @@ SET(WRAPPER_LIBRARY_LINK_LIBRARIES ITKNumerics ITKStatistics)
 SET(WRAPPER_LIBRARY_DEPENDS 
   VXLNumerics
   ITKCommonA
+  ITKCommonB
 )
 
 WRAPPER_LIBRARY_CREATE_WRAP_FILES()
