Add PyCommand and TclCommand support.
darcs-hash:20060124030736-733a7-d85104cdf158a3b014a9c96c13a748349a1b1ac5.gz

--- a/Python/CMakeLists.txt
+++ b/Python/CMakeLists.txt
@@ -1,4 +1,19 @@
 ###############################################################################
+# Add the ITKPythonSupport library which contains the itkPyCommand class.
+
+BEGIN_WRAPPER_LIBRARY("ITKPythonSupport")
+
+SET(WRAPPER_LIBRARY_DEPENDS ITKCommonA)
+SET(WRAPPER_LIBRARY_LINK_LIBRARIES ITKCommon)
+# Need to include the current dir because the compiler needs to find itkPyCommand.h
+INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
+SET(WRAPPER_LIBRARY_CXX_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/itkPyCommand.cxx") 
+
+WRAPPER_LIBRARY_CREATE_WRAP_FILES()
+WRAPPER_LIBRARY_CREATE_LIBRARY()
+
+
+###############################################################################
 # Configure the path-dependent itkConfig.py
 
 SET(CONFIG_WRAP_ITK_DATA_ROOT "${WrapITK_BINARY_DIR}/Data")
