--- a/Python/CMakeLists.txt
+++ b/Python/CMakeLists.txt
@@ -1,16 +1,7 @@
 ###############################################################################
-# Add the ITKPythonSupport library which contains the itkPyCommand class.
+# Create the PyUtils library
 
-BEGIN_WRAPPER_LIBRARY("ITKPythonSupport")
-
-SET(WRAPPER_LIBRARY_DEPENDS ITKCommonA)
-SET(WRAPPER_LIBRARY_LINK_LIBRARIES ITKCommon)
-# Need to include the current dir because the compiler needs to find itkPyCommand.h
-INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
-SET(WRAPPER_LIBRARY_CXX_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/itkPyCommand.cxx") 
-
-WRAPPER_LIBRARY_CREATE_WRAP_FILES()
-WRAPPER_LIBRARY_CREATE_LIBRARY()
+SUBDIRS(PyUtils)
 
 
 ###############################################################################
