fixes to python support
darcs-hash:20060124070437-733a7-3c280f0fd1adf8da11d7e60f3831f7e46a05c3cd.gz

--- a/Python/PyUtils/CMakeLists.txt
+++ b/Python/PyUtils/CMakeLists.txt
@@ -1,7 +1,7 @@
 ###############################################################################
 # Add the ITKPythonSupport library which contains the itkPyCommand class.
 
-BEGIN_WRAPPER_LIBRARY("PyUtils")
+BEGIN_WRAPPER_LIBRARY("ITKPyUtils")
 
 SET(WRAPPER_LIBRARY_DEPENDS ITKCommonA)
 SET(WRAPPER_LIBRARY_LINK_LIBRARIES ITKCommon)
