There is no need to have "Py" in the name. It's just heavier to manipulate.
darcs-hash:20060124094632-2fc9d-c62ca5a5e64a1b40855816850213431a964a3d31.gz

--- a/Python/CMakeLists.txt
+++ b/Python/CMakeLists.txt
@@ -51,7 +51,7 @@ INSTALL_FILES("${WRAP_ITK_INSTALL_LOCATION}/Python" FILES
 SET(ITK_PYTHON_FILES
   itk
   itkBase
-  itkPyTemplate
+  itkTemplate
   itkTypes
   )
 # Done listing files.
