enhance returned types coverage
darcs-hash:20060126104212-2fc9d-84c794372f81a6a3b67a8b5f677691abc953ae67.gz

--- a/CommonA/CMakeLists.txt
+++ b/CommonA/CMakeLists.txt
@@ -48,6 +48,7 @@ SET(WRAPPER_LIBRARY_GROUPS
     itkImageRegionConstIteratorWithIndex
     itkImageRegionIterator
     itkImageRegionIteratorWithIndex
+    itkVersor
 )
 
 SET(WRAPPER_LIBRARY_DEPENDS VXLNumerics)
