--- a/ConfigurationInputs/WrapITKConfig.cmake.in
+++ b/ConfigurationInputs/WrapITKConfig.cmake.in
@@ -38,7 +38,7 @@ ENDFOREACH(var)
 
 SET(WRAP_ITK_INSTALL_LOCATION "@WRAP_ITK_INSTALL_LOCATION@" CACHE STRING "Path to the top of the install tree (will be appended to CMAKE_INSTALL_PREFIX).")
 
-SET(WRAP_ITK_SWG_FILES "@CONFIG_SWIG_DIR@/itk.swg")
+SET(WRAP_ITK_SWIG_LIBRARY_DIR "@CONFIG_SWIG_DIR@")
 SET(WRAP_ITK_CONFIG_DIR "@CONFIG_CONFIG_DIR@")
 SET(WRAP_ITK_CMAKE_DIR "@CONFIG_CMAKE_DIR@")
 IF(JAVA_OUTPUT_DIR)
