--- a/Python/CMakeLists.txt
+++ b/Python/CMakeLists.txt
@@ -57,29 +57,30 @@ SET(ITK_PYTHON_FILES
 # Done listing files.
 
 # Now copy these files if necessary.
-SET(WRAP_ITK_PYTHON_FILES)
+SET(WRAP_ITK_PYTHON_INSTALL_FILES)
 
 IF ("${WrapITK_BINARY_DIR}" MATCHES "^${WrapITK_SOURCE_DIR}$")
   # In source build -- no need to copy Python file. Do need to set up the install.
     FOREACH(file ${ITK_PYTHON_FILES})
     SET(install_tgt "${CMAKE_CURRENT_SOURCE_DIR}/${file}.py")
-    SET(WRAP_ITK_PYTHON_FILES ${WRAP_ITK_PYTHON_FILES} "${install_tgt}")
+    SET(WRAP_ITK_PYTHON_INSTALL_FILES ${WRAP_ITK_PYTHON_FILES} "${install_tgt}")
   ENDFOREACH(file)
 ELSE ("${WrapITK_BINARY_DIR}" MATCHES "^${WrapITK_SOURCE_DIR}$")
+  SET(WRAP_ITK_PYTHON_FILES)
   ADD_CUSTOM_TARGET(copy_python_files ALL)
-  
   FOREACH(file ${ITK_PYTHON_FILES})
     SET(src "${CMAKE_CURRENT_SOURCE_DIR}/${file}.py")
     # recall that WRAP_ITK_BUILD_INTDIR expands to nothing if no config types are set,
     # or to "CMAKE_CONFIG_INTDIR/" if there are such. Likewise, WRAP_ITK_INSTALL_INTDIR
     # expands to ${BUILD_TYPE}/ or nothing.
     SET(copy_tgt "${CMAKE_CURRENT_BINARY_DIR}/${WRAP_ITK_BUILD_INTDIR}${file}.py")
+    SET(WRAP_ITK_PYTHON_FILES ${WRAP_ITK_PYTHON_FILES} "${copy_tgt}")
     SET(install_tgt "${CMAKE_CURRENT_BINARY_DIR}/${WRAP_ITK_INSTALL_INTDIR}${file}.py")
-    SET(WRAP_ITK_PYTHON_FILES ${WRAP_ITK_PYTHON_FILES} "${install_tgt}")
+    SET(WRAP_ITK_PYTHON_INSTALL_FILES ${WRAP_ITK_PYTHON_INSTALL_FILES} "${install_tgt}")
     ADD_CUSTOM_COMMAND(SOURCE ${src}
       COMMAND ${CMAKE_COMMAND}
       ARGS -E copy ${src} ${copy_tgt}
-      OUTPUTS ${tgt}
+      OUTPUTS ${copy_tgt}
       TARGET copy_python_files
       COMMENT "source copy")
   ENDFOREACH(file)
@@ -92,7 +93,7 @@ ELSE ("${WrapITK_BINARY_DIR}" MATCHES "^${WrapITK_SOURCE_DIR}$")
 ENDIF ("${WrapITK_BINARY_DIR}" MATCHES "^${WrapITK_SOURCE_DIR}$")
 
 # Install the package python files.
-INSTALL_FILES("${WRAP_ITK_INSTALL_LOCATION}/Python" FILES ${WRAP_ITK_PYTHON_FILES})
+INSTALL_FILES("${WRAP_ITK_INSTALL_LOCATION}/Python" FILES ${WRAP_ITK_PYTHON_INSTALL_FILES})
 
 
 ###############################################################################
